[package]
name = "futures-pool"
version = "0.1.0"
documentation = "https://docs.rs/futures-pool"
repository = "https://github.com/carllerche/futures-pool"
homepage = "https://github.com/carllerche/futures-pool"
license = "MIT/Apache-2.0"
authors = ["Carl Lerche <me@carllerche.com>"]
description = """
A Future aware thread pool based on work stealing.
"""
keywords = ["futures"]
categories = ["concurrency", "asynchronous"]

[dependencies]
coco = "0.3"
futures = "0.1"
num_cpus = "1.2"
rand = "0.3"
log = "0.3"

[dev-dependencies]
tokio-timer = "0.1"
env_logger = "0.4"
futures-cpupool = "0.1.7"
